kubernetes/apps/TACOS/terrakube-ui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: terrakube-ui-service
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: terrakube-ui
