kubernetes/apps/TACOS/terrakube-ui/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: terrakube-ui-ingress
  annotations:
    cert-manager.io/cluster-issuer: iam-demo-certs-issuer
spec:
  rules:
  - host: "terrakube-ui.iam-demo.test"
    http:
      paths:
      - path: "/"
        pathType: "Prefix"
        backend:
          service:
            name: terrakube-ui-svc
            port:
              number: 8080
  tls:
  - hosts:
    - "terrakube-ui.iam-demo.test"
    secretName: iam-demo-terrakube-ui-tls
